--- a/Pipfile
+++ b/Pipfile
@@ -3,11 +3,13 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 
 [packages]
-dj-database-url = "*"
+
+"dj-database-url" = "*"
 django = "*"
 gunicorn = "*"
-psycopg2 = "*"
+"psycopg2" = "*"
 whitenoise = "*"
+tornado = "*"
 
 [requires]
 python_version = "3.6"
