--- a/package.json
+++ b/package.json
@@ -19,10 +19,7 @@
     "gulp-header": "1.8.9",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "gulp-uglify": "3.0.0"
- 
-  },
-  "devDependencies": {
+    "gulp-uglify": "3.0.0",
     "browser-sync": "2.18.13"
   },
   "scripts": {
