--- a/database.yml
+++ b/database.yml
@@ -1,18 +1,27 @@
 - name: Oscar
   image: /img/cats/cat1.jpg
+  price: 1000 €
 - name: Misty
   image: /img/cats/cat2.jpg
+  price: 900 €
 - name: Smokey
   image: /img/cats/cat3.jpg
+  price: 750 €
 - name: Coco
   image: /img/cats/cat4.jpg
+  price: 1100 €
 - name: Jasper
   image: /img/cats/cat5.jpg
+  price: 900 €
 - name: Molly
   image: /img/cats/cat6.jpg
+  price: 950 €
 - name: Trevor
   image: /img/cats/cat7.jpg
+  price: 800 €
 - name: Bella
   image: /img/cats/cat8.jpg
+  price: 850 €
 - name: Lucy
   image: /img/cats/cat9.jpg
+  price: 900 €
