Add nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -55,7 +55,7 @@ http {
       proxy_cache_bypass     $http_cache_purge;
       add_header             Cache-Control max-age=31536000;
       add_header             X-Cache-Status $upstream_cache_status;
-      proxy_pass             https://anton-testing.s3.eu-central-1.amazonaws.com/;
+      proxy_pass             http://anton-testing.s3.eu-central-1.amazonaws.com/;
     }
 
   }
